--- a/practice01/index.html
+++ b/practice01/index.html
@@ -30,5 +30,56 @@
         </button>
       </div>
     </header>
+    <section class="hero">
+      <div class="catch">
+        <div class="container">
+          <h1>
+            <img src="img/hero.svg" alt="BB Assistant Company" />
+          </h1>
+          <p>縁の下の力持ちとしてお仕事を支えます</p>
+        </div>
+      </div>
+    </section>
+    <section class="message">
+      <div class="container">
+        <h2>ビジネスアシスタントとして<br />サポートを続けて20年</h2>
+        <p>
+          プロのビジネスアシスタントとして独立後、さまざまなお客様からご依頼をいただき、多様な業務、事業、効率化などのサポートを行ってきました。得意分野が多岐にわたるスタッフが揃っていますので、必要に応じてどのような業務にも対応いたし、雑事に振り回されることなく、重要な案件に取り組んでいただくことを目指しています。
+        </p>
+      </div>
+    </section>
+    <section class="service">
+      <div class="container">
+        <h2>アシスタントサービス</h2>
+        <p>私達にできること</p>
+
+        <div class="details">
+          <article class="detail office">
+            <figure><img src="img/office.jpg" /></figure>
+            <h3>オフィス業務<br />サポート</h3>
+            <p>
+              書類管理、電話・メール応対、スケジュール管理、デジタルトランスフォーメーションなど、さまざまなオフィス業務のサポートを行います。
+            </p>
+            <a href="#">OFFICE</a>
+          </article>
+          <article class="detail manage">
+            <figure><img src="img/manage.jpg" /></figure>
+            <h3>マネージメント<br />サポート</h3>
+            <p>
+              プロジェクトチームの構成メンバーのマネージメント、案件の進捗管理、リーダーのアシスタントサポートなどを行います。
+            </p>
+            <a href="#">MANAGEMENT</a>
+          </article>
+          <article class="detail research">
+            <figure><img src="img/research.jpg" /></figure>
+            <h3>調査・研究<br />サポート</h3>
+            <p>
+              各種事業の立ち上げ、運営にかかわる調査・研究のサポートや、特定分野の専門家との提携のお手伝いなどを行います。
+            </p>
+            <a href="#">RESEARCH</a>
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
