--- a/practice01/index.html
+++ b/practice01/index.html
@@ -55,28 +55,28 @@
 
         <div class="details">
           <article class="detail office">
-            <figure><img src="img/office.jpg" /></figure>
+            <figure><img /></figure>
             <h3>オフィス業務<br />サポート</h3>
             <p>
               書類管理、電話・メール応対、スケジュール管理、デジタルトランスフォーメーションなど、さまざまなオフィス業務のサポートを行います。
             </p>
-            <a href="#">OFFICE</a>
+            <a href="#" class="btn">OFFICE</a>
           </article>
           <article class="detail manage">
-            <figure><img src="img/manage.jpg" /></figure>
+            <figure><img /></figure>
             <h3>マネージメント<br />サポート</h3>
             <p>
               プロジェクトチームの構成メンバーのマネージメント、案件の進捗管理、リーダーのアシスタントサポートなどを行います。
             </p>
-            <a href="#">MANAGEMENT</a>
+            <a href="#" class="btn">MANAGEMENT</a>
           </article>
           <article class="detail research">
-            <figure><img src="img/research.jpg" /></figure>
+            <figure><img /></figure>
             <h3>調査・研究<br />サポート</h3>
             <p>
               各種事業の立ち上げ、運営にかかわる調査・研究のサポートや、特定分野の専門家との提携のお手伝いなどを行います。
             </p>
-            <a href="#">RESEARCH</a>
+            <a href="#" class="btn">RESEARCH</a>
           </article>
         </div>
       </div>
