--- a/practice01/index.html
+++ b/practice01/index.html
@@ -25,7 +25,15 @@
           </div>
         </div>
 
-        <button type="button" class="nav-button">
+        <nav class="nav">
+          <ul>
+            <li><a href="#">会社情報</a></li>
+            <li><a href="#">サービス</a></li>
+            <li><a href="#" class="btn">お問い合わせ</a></li>
+          </ul>
+        </nav>
+
+        <button type="button" class="nav-button" onclick="navFunc()">
           <span class="sr-only">MENU</span>
         </button>
       </div>
@@ -81,5 +89,66 @@
         </div>
       </div>
     </section>
+    <section class="contact">
+      <div class="container">
+        <div class="text">
+          <h2>お問い合せ</h2>
+          <p>
+            もっと業務を効率化したい<br />マネージメントの煩わしさから開放されたい<br />本業に集中したいなどなど、<br />些細なことでもお気軽にお問い合わせください。
+          </p>
+        </div>
+        <form class="form">
+          <p>
+            <label>
+              <span class="sr-only"> 名前</span>
+              <input type="text" name="name" placeholder="名前" />
+            </label>
+          </p>
+          <p>
+            <label>
+              <span class="sr-only">メールアドレス</span>
+              <input type="email" name="email" placeholder="メールアドレス" />
+            </label>
+          </p>
+          <p>
+            <label>
+              <span class="sr-only">メッセージ</span>
+              <textarea name="msg" placeholder="メッセージを入力してください。"></textarea>
+            </label>
+          </p>
+          <p>
+            <input type="submit" value="送信" class="btn"/>
+          </p>
+        </form>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="info">
+          <div class="site">
+            <img src="img/bb-white.svg" alt="">
+            <div>
+              <p class="corp">BBアシスタントカンパニー</p>
+            </div>
+          </div>
+          <p class="add">
+            〒901-3125<br>
+            沖縄県島尻郡久米島町字鳥島グスク<br>
+            0997-1234-5678 <br>
+          </p>
+        </div> 
+
+        <ul class="sns">
+          <li><a href="#"><img src="img/logo-twitter.svg" alt="Twitter"></a></li>
+          <li><a href="#"><img src="img/logo-facebook.svg" alt="Facebook"></a></li>
+          <li><a href="#"><img src="img/logo-instagram.svg" alt="Instagram"></a></li>
+        </ul>
+      </div>
+    </footer>
+    <script>
+      function navFunc() {
+        document.querySelector('html').classList.toggle('open')
+      }
+    </script>
   </body>
 </html>
